631 checkpoint skipper (#660)
* created configuration of skips

* added item at start

* set up detection of right click

* detects interactions properly

* handled player skips mid-game

* added leave/join handling

* removed debug stuff

* reaching the max puzzle gives points and removes skips

* fixed missing exclaimation marks in tablistcommmand

* aded example

* fixed teleporting issue