@@ -12,6 +12,7 @@ import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.World;
+import org.bukkit.inventory.ItemStack;
 import org.bukkit.util.BoundingBox;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -46,9 +47,51 @@ class ParkourPathwayConfigDTO implements Validatable {
     private List<PuzzleDTO> puzzles;
     private @Nullable BoundingBox spectatorArea;
     private @Nullable List<Material> preventInteractions;
+    /**
+     * Defines the number of skips and the item used to trigger them
+     */
+    private @Nullable Skips skips;
     private Scores scores;
     private Durations durations;
     private Component description;
+    
+    @Data
+    @AllArgsConstructor
+    static class Skips {
+        /** the number of skips each player gets. 0 or negative means no skips. */
+        private int numOfSkips;
+        /** the item that players interact with to use their skips. Defaults to lapis lazuli */
+        private @Nullable Material item;
+        /** the display name of the skip item. Defaults to "Skip Puzzle" */
+        private @Nullable Component itemName;
+        /** the lore of the skip item. Defaults to "Right click to skip the current puzzle" */
+        private @Nullable List<Component> itemLore;
+        /** the number of points to award for unused skips */
+        private int unusedSkipScore;
+        /**
+         * The puzzle after which no skips are allowed, and players
+         * will be given points for their remaining unused skips.
+         * Values less than zero will allow skips to be used the entire
+         * game. Values greater than the number of puzzles will essentially
+         * do the same. 
+         */
+        private int maxSkipPuzzle;
+        
+        public @NotNull Material getItem() {
+            return (item != null) ? item : Material.LAPIS_LAZULI;
+        }
+        
+        public @NotNull Component getItemName() {
+            return (itemName != null) ? itemName : Component.text("Skip Puzzle");
+        }
+        
+        public @NotNull List<Component> getItemLore() {
+            return (itemLore != null) ? itemLore : List.of(
+                    Component.text("Right click to skip"),
+                    Component.text("the current puzzle")
+            );
+        }
+    }
     
     @Override
     public void validate(@NotNull Validator validator) {
@@ -99,7 +142,7 @@ class ParkourPathwayConfigDTO implements Validatable {
         if (this.teamSpawns == null) {
             return;
         }
-        PuzzleDTO firstPuzzle = puzzles.get(0);
+        PuzzleDTO firstPuzzle = puzzles.getFirst();
         validator.validate(!teamSpawns.isEmpty(), "teamSpawns must have at least one entry");
         for (int i = 0; i < teamSpawns.size(); i++) {
             TeamSpawnDTO teamSpawnDTO = teamSpawns.get(i);
@@ -122,9 +165,9 @@ class ParkourPathwayConfigDTO implements Validatable {
             newTeamSpawns = TeamSpawnDTO.toTeamSpawns(newWorld, this.getTeamSpawns());
         }
         List<Puzzle> newPuzzles = PuzzleDTO.toPuzzles(newWorld, this.getPuzzles());
-        Location newStartingLocation = newPuzzles.get(0).checkPoints().get(0).respawn();
+        Location newStartingLocation = newPuzzles.getFirst().checkPoints().getFirst().respawn();
         
-        return ParkourPathwayConfig.builder()
+        ParkourPathwayConfig.ParkourPathwayConfigBuilder builder = ParkourPathwayConfig.builder()
                 .world(newWorld)
                 .startingLocation(newStartingLocation)
                 .spectatorArea(this.spectatorArea)
@@ -142,13 +185,33 @@ class ParkourPathwayConfigDTO implements Validatable {
                 .winScore(this.scores.win)
                 .preventInteractions(this.preventInteractions != null ? this.preventInteractions : Collections.emptyList())
                 .descriptionDuration(this.durations.description)
-                .description(this.description)
-                .build();
+                .description(this.description);
+        
+        if (this.skips != null && this.skips.getNumOfSkips() > 0) {
+            ItemStack skipItem = new ItemStack(this.skips.getItem());
+            skipItem.editMeta(meta -> {
+                meta.displayName(this.skips.getItemName());
+                meta.lore(this.skips.getItemLore());
+            });
+            builder
+                    .numOfSkips(this.skips.getNumOfSkips())
+                    .unusedSkipScore(this.skips.getUnusedSkipScore())
+                    .maxSkipPuzzle(this.skips.getMaxSkipPuzzle())
+                    .skipItem(skipItem);
+        } else {
+            builder
+                    .numOfSkips(0)
+                    .unusedSkipScore(0)
+                    .maxSkipPuzzle(0)
+                    .skipItem(new ItemStack(Material.LAPIS_LAZULI));
+        }
+        
+        return builder.build();
     }
     
     public static ParkourPathwayConfigDTO fromConfig(ParkourPathwayConfig config) {
         return ParkourPathwayConfigDTO.builder()
-                .version(Main.VALID_CONFIG_VERSIONS.get(Main.VALID_CONFIG_VERSIONS.size() - 1))
+                .version(Main.VALID_CONFIG_VERSIONS.getLast())
                 .world(config.getWorld().getName())
                 .glassBarrier(config.getGlassBarrier())
                 .glassBarrierOpenMessage(config.getGlassBarrierOpenMessage())
@@ -158,7 +221,18 @@ class ParkourPathwayConfigDTO implements Validatable {
                 .spectatorArea(config.getSpectatorArea())
                 .scores(new Scores(config.getCheckpointScore(), config.getWinScore()))
                 .preventInteractions(config.getPreventInteractions())
-                .durations(new Durations(config.getTeamSpawnsDuration(), config.getStartingDuration(), config.getTimeLimitDuration(), config.getMercyRuleDuration(), config.getMercyRuleAlertDuration(), config.getDescriptionDuration()))
+                .skips(new Skips(config.getNumOfSkips(), 
+                        config.getSkipItem().getType(), 
+                        config.getSkipItem().getItemMeta().displayName(), 
+                        config.getSkipItem().getItemMeta().lore(), 
+                        config.getUnusedSkipScore(), 
+                        config.getMaxSkipPuzzle()))
+                .durations(new Durations(config.getTeamSpawnsDuration(), 
+                        config.getStartingDuration(), 
+                        config.getTimeLimitDuration(), 
+                        config.getMercyRuleDuration(), 
+                        config.getMercyRuleAlertDuration(), 
+                        config.getDescriptionDuration()))
                 .description(config.getDescription())
                 .build();
     }
